# procedural-terrain-and-volumetric-clouds

./: .gitignore  CMakeLists.txt  Makefile  README.md  Untitled.ipynb  build_for_vs.ps1  build_with_tests.ps1  imgui.ini  install_dependencies.ps1  run.ps1  vcpkg.json
cmake/: util_funcs.cmake
include/: airplane.h  audio_manager.h  camera.h  cloud_system.h  debug.h  dynamic_system.h  endless_terrain.h  engine_consts.h  error_utils.h  framebuffer.h  funcs.h  g_types.h  game.h  imgui_impl_opengl3_loader.h  imgui_internal.h  lrucache.h  mesh.h  model.h  packet.h  perlin.h  plane.h  rigid_body.h  shader.h  sprite_renderer.h  terrain.h  window.h
include/interfaces/: audio_manager_interface.h
models/air_drop/: air_drop.mtl
models/plane/: Read-Me.txt  a22.mtl
noise_scripts/: blue_noise.py
shaders/: compute.glsl  e_f.glsl  e_v.glsl  model-fshader.glsl  model-vshader.glsl  normal_viz.glsl  normal_viz_f.glsl  normal_viz_v.glsl  p_f.glsl  p_v.glsl  q_f.glsl  q_v.glsl  quadF.glsl  quadV.glsl  quad_frag.glsl  quad_vertex.glsl  textFshader.glsl  textVshader.glsl  w_f.glsl  w_v.glsl
src/: airplane.cpp  audio_manager.cpp  boing.cpp  camera.cpp  dynamic_system.cpp  endless_terrain.cpp  funcs.cpp  game.cpp  imgui.cpp  imgui_impl_opengl3.cpp  imgui_table.cpp  instancing-main.cpp  instancing.cpp  mesh.cpp  model.cpp  perlin.cpp  plane.cpp  shader.cpp  text-render.cpp  textrender.cpp
src/core/: CMakeLists.txt  airplane.cpp  audio_manager.cpp  camera.cpp  cloud_system.cpp  dynamic_system.cpp  endless_terrain.cpp  funcs.cpp  game.cpp  imgui_draw.cpp  imgui_widgets.cpp  mesh.cpp  model.cpp  perlin.cpp  shader.cpp  sprite_renderer.cpp  textrender.cpp
src/main/: CMakeLists.txt  instancing-main.cpp
tests/: CMakeLists.txt  test_airplane.cpp  test_camera.cpp  test_endless_terrain.cpp  test_framebuffer.cpp  test_lrucache.cpp  test_mesh.cpp  test_perlin.cpp  test_rigid_body.cpp  test_shader.cpp  test_sprite_renderer.cpp  test_text_renderer.cpp
tests/include/: empty_context.h  mock_audio_manager.h  mock_mesh.h
tests/resources/: test_frag_with_uniforms.glsl  test_geom.glsl
